🐞 fix: scrollbar 组件默认样式

--- a/src/scrollbar/src/styles/index.css
+++ b/src/scrollbar/src/styles/index.css
@@ -11,9 +11,31 @@
 .jo-scrollbar::-webkit-scrollbar-thumb {
   /*滚动条里面小方块*/
   border-radius: 3px;
-  background: #bbb;
+  background-color: #bbb;
+  transition: background-color 0.3s;
+}
+/*鼠标悬浮在滑块上时滑块的样式*/    
+.jo-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #aaa;
 }
 .jo-scrollbar::-webkit-scrollbar-track {
   /*滚动条里面轨道*/
   background: #0000;
+}
+
+.jo-scrollbar--hidden::-webkit-scrollbar-thumb {
+  background-color: #bbb0;
+}
+.jo-scrollbar--hidden:hover::-webkit-scrollbar-thumb {
+  background-color: #bbb;
+}
+
+.jo-scrollbar--remove::-webkit-scrollbar {
+  width: 0px; 
+  height: 0px;
+  transition: width 3s height 3s;
+}
+.jo-scrollbar--remove:hover::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
 }
